--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,6 @@ h1 {
   right: 0;
   bottom: 0;
   z-index: 0;
-  background-image: linear-gradient(to right, var(--primary), var(--secondary));
   border-radius: 10px;
   transition: 0.2s;
 }
@@ -163,4 +162,20 @@ h1 {
 }
 .income-list .income-item:hover {
   box-shadow: 0 0 6px rgba(0,0,0,0.1);
+}
+
+@media all and (max-width: 700px) {
+  .form-inner {
+    flex-direction: column;
+    text-align: center;
+    background-color: #F8F8F8;
+  }
+
+  .form-inner input[type="text"],
+  .form-inner input[type="date"],
+  .form-inner input[type="number"],
+  .form-inner input[type="submit"] {
+    border-radius: 10px;
+    margin-bottom: 10px;
+  }
 }
